<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_beranda">

    <fragment
        android:id="@+id/nav_beranda"
        android:name="com.example.pelayananonlinesumedang.ui.home.HomeFragment"
        android:label="@string/menu_beranda"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_pendaftaran_layanan"
        android:name="com.example.pelayananonlinesumedang.ui.gallery.GalleryFragment"
        android:label="@string/menu_pendaftaran_layanan"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_history_pendaftaran"
        android:name="com.example.pelayananonlinesumedang.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_history_pendaftaran"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.pelayananonlinesumedang.fragment_info"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info"/>
</navigation>