<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.Pendaftaran.PendaftaranFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_registrasi_title"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_margin="8dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/registrasi_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_nama_lengkap"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/nik_ktp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_nik_ktp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/pilih_pelayanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_pilih_pelayanan"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/black"
        />

    <Spinner
        android:id="@+id/list_form_pelayanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/list_pilihan_pelayanan"
        android:padding="8dp"
        />

    <TextView
        android:id="@+id/tanggal_booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_tanggal_booking"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/tv_tanggalbooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/hint_form_tanggalbooking"
        />

    <Button
        android:clickable="true"
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/button_daftar_pelayanan"
        android:layout_marginTop="10dp"
        />


</LinearLayout>