<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment"
    android:orientation="vertical">



    <TextView
        android:id="@+id/registrasi_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_nama_lengkap" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/nik_ktp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_nik"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"/>

    <TextView
        android:id="@+id/pilih_pelayanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_pilih_pelayanan"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"/>

    <TextView
        android:id="@+id/tanggal_booking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_tanggal_booking" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_daftar_pelayanan" />


</LinearLayout>