<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.History.HistoryFragment"
    android:orientation="vertical"
    android:padding="20dp">

        <TextView
            android:id="@+id/tv_cari_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_nama_lengkap"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/edt_cari_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/tv_cari_nik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_nik_ktp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/edt_cari_nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:clickable="true"
            android:id="@+id/button_cari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/cari_data"
            android:layout_marginTop="10dp"
            />

</LinearLayout>